Revision 2: Add chat prompt UI screenshots
- Add create_chat_prompt.png showing the create dialog
- Add chat_prompt_ui_view.png showing chat prompts in the library
- Add screenshot to documentation showing chat prompt UI view
- Make Text Prompts and Chat Prompts headers clickable links

--- a/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/prompt_engineering/prompt_management.mdx
@@ -466,6 +466,12 @@ otherwise it will return the existing prompt.
 This means you can safely run the code multiple times without creating duplicate prompts.
 </Tip>
 
+Once created, you can view and manage your chat prompts in the Opik UI:
+
+<Frame>
+    <img src="/img/prompt_engineering/chat_prompt_ui_view.png" />
+</Frame>
+
 ### Multimodal chat prompts
 
 Chat prompts support multimodal content, allowing you to include images and videos alongside text. This is useful for vision-enabled models.
