Update home page description

--- a/apps/opik-documentation/documentation/fern/docs/home.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/home.mdx
@@ -1,10 +1,9 @@
 ---
-headline: Home | Opik Documentation
-og:description: Build and enhance AI applications with Opik, your essential tool for
-  logging, debugging, and optimizing LLM performance effectively.
-og:site_name: Opik Documentation
-og:title: 'Getting Started with Opik: Optimize AI Logging'
 title: Home
+headline: Opik Documentation - Open-Source LLM Observability & Optimization
+og:site_name: Opik Documentation
+og:title: "Opik - Open-Source LLM Observability & Agent Optimization"
+og:description: "Build, test, and optimize GenAI apps from prototype to production. Comprehensive tracing, evaluation, and prompt optimization for RAG, agents, and more."
 ---
 
 Opik is an [open-source](https://github.com/comet-ml/opik) logging, debugging, and optimization
