--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/reference.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/opik_optimizer/reference.mdx
@@ -29,7 +29,7 @@ The SDK provides several optimizer classes that all inherit from `BaseOptimizer`
 - **MetaPromptOptimizer**: Employs meta-prompting techniques for optimization
 - **EvolutionaryOptimizer**: Uses genetic algorithms for prompt evolution
 - **GepaOptimizer**: Leverages GEPA (Genetic-Pareto) optimization approach
-- **HierarchicalReflectiveOptimizer**: Uses hierarchical root cause analysis for targeted prompt refinement
+- **HierarchicalReflectiveOptimizer (HAPO)**: Uses hierarchical root cause analysis for targeted prompt refinement
 
 ## Standardized Method Signatures
 
