--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/define_datasets.mdx
@@ -33,7 +33,7 @@ Every item is a JSON object. Required keys depend on your prompt template; optio
     dataset = client.get_or_create_dataset(name="agent-opt-support")
     dataset.insert([
         {"question": "Summarize Opik.", "answer": "Opik is an LLM observability platform."},
-        {"question": "List two optimizer types.", "answer": "MetaPrompt and Hierarchical Reflective."},
+        {"question": "List two optimizer types.", "answer": "MetaPrompt and HAPO."},
     ])
     ```
   </Step>
