--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/overview.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_agents/overview.mdx
@@ -39,7 +39,7 @@ See `sdks/opik_optimizer/scripts/llm_frameworks/` for working agents (LangGraph,
 
 1. **Log traces** from your agent (LangGraph, Google ADK, etc.) into Opik so you can collect datasets and failure examples.
 2. **Snapshot the agent prompt or plan** as a `ChatPrompt` or optimizer-ready artifact.
-3. **Run optimizers** (MetaPrompt, Hierarchical Reflective, etc.) using your agent’s datasets.
+3. **Run optimizers** (MetaPrompt, HAPO, etc.) using your agent's datasets.
 4. **Deploy the improved instructions** back into the agent runtime.
 
 <Info>
