Rename Hierarchical ooptimizer to HAPO

--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/optimizer_parameters_guide.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/optimizer_parameters_guide.mdx
@@ -103,7 +103,7 @@ All optimizers support these parameters in their `optimize_prompt()` method:
 - **Max Rounds**: More rounds (5-10) for thorough refinement, fewer (2-3) for quick improvement
 - **Prompts Per Round**: More candidates (6-8) for exploration, fewer (2-4) for focused refinement
 
-### HierarchicalReflectiveOptimizer (HAPO)
+### HAPO (Hierarchical Adaptive Prompt Optimizer)
 
 **Purpose**: HAPO (Hierarchical Adaptive Prompt Optimizer) uses hierarchical root cause analysis to systematically improve prompts by analyzing failures in batches, synthesizing findings, and addressing identified failure modes.
 
