--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/hierarchical_reflective_optimizer.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/algorithms/hierarchical_reflective_optimizer.mdx
@@ -2,7 +2,7 @@
 description: Learn how to use HAPO (Hierarchical Adaptive Prompt Optimizer) to improve prompts
   through systematic root cause analysis of failure modes and targeted refinement.
 headline: HAPO | Opik Documentation
-og:description: Learn how HAPO (HierarchicalReflectiveOptimizer) enhances prompt refinement
+og:description: Learn how HAPO (Hierarchical Adaptive Prompt Optimizer) enhances prompt refinement
   by addressing specific failure modes through systematic analysis.
 og:site_name: Opik Documentation
 og:title: HAPO (Hierarchical Adaptive Prompt Optimizer) - Opik
@@ -10,12 +10,12 @@ subtitle: Hierarchical root cause analysis for targeted prompt improvement
 title: HAPO (Hierarchical Adaptive Prompt Optimizer)
 ---
 
-The `HierarchicalReflectiveOptimizer` (HAPO - Hierarchical Adaptive Prompt Optimizer) uses hierarchical root cause analysis to identify and address
+`HAPO` (Hierarchical Adaptive Prompt Optimizer) uses hierarchical root cause analysis to identify and address
 specific failure modes in your prompts. It analyzes evaluation results, identifies patterns in
 failures, and generates targeted improvements to address each failure mode systematically.
 
 <Note>
-  `HierarchicalReflectiveOptimizer` (HAPO) is ideal when you have a complex prompt that you want to refine
+  `HAPO` is ideal when you have a complex prompt that you want to refine
   based on understanding *why* it's failing. Unlike optimizers that generate many random variations,
   this optimizer systematically analyzes failures, identifies root causes, and makes surgical
   improvements to address each specific issue.
@@ -41,10 +41,10 @@ The optimizer is open-source, you can check out the root cause analysis code and
 
 ## Quickstart
 
-You can use the `HierarchicalReflectiveOptimizer` to optimize a prompt:
+You can use `HAPO` to optimize a prompt:
 
 ```python maxLines=1000
-from opik_optimizer import HierarchicalReflectiveOptimizer, ChatPrompt, datasets
+from opik_optimizer import HAPO, ChatPrompt, datasets
 from opik.evaluation.metrics.score_result import ScoreResult
 
 # 1. Define your evaluation dataset
@@ -85,8 +85,8 @@ initial_prompt = ChatPrompt(
     ]
 )
 
-# 4. Initialize the HierarchicalReflectiveOptimizer
-optimizer = HierarchicalReflectiveOptimizer(
+# 4. Initialize HAPO
+optimizer = HAPO(
     model="gpt-4o",
     n_threads=8,
     max_parallel_batches=5,
@@ -143,8 +143,8 @@ The `optimize_prompt` method has the following parameters:
 
 ### Model Support
 
-There are two models to consider when using the `HierarchicalReflectiveOptimizer`:
-- `HierarchicalReflectiveOptimizer.model`: The model used for the root cause analysis and failure mode synthesis.
+There are two models to consider when using `HAPO`:
+- `HAPO.model`: The model used for the root cause analysis and failure mode synthesis.
 - `ChatPrompt.model`: The model used to evaluate the prompt.
 
 The `model` parameter accepts any LiteLLM-supported model string (e.g., `"gpt-4o"`, `"azure/gpt-4"`,
@@ -152,7 +152,7 @@ The `model` parameter accepts any LiteLLM-supported model string (e.g., `"gpt-4o
 using the `model_parameters` parameter:
 
 ```python
-optimizer = HierarchicalReflectiveOptimizer(
+optimizer = HAPO(
     model="anthropic/claude-3-opus-20240229",
     model_parameters={
         "temperature": 0.7,
