--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/changelog.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/getting_started/changelog.mdx
@@ -13,12 +13,12 @@ Stay current on Agent Optimizer updates. Each entry below reflects a version bum
 | Date | Version | Highlights |
 | --- | --- | --- |
 | **TBD** | `2.3.0` | Added validation dataset support across all optimizers to prevent overfitting, improved structured output parsing with better error handling, enhanced test infrastructure with parallel execution (pytest-xdist, pytest-profiling), upgraded style inference to use structured Pydantic models, improved token limit error messages, added JSON response cleanup utilities, enhanced Wikipedia search logging, refactored dataset size tests, added Makefile profiling target, and applied LiteLLM cost mapping workaround. [Commits →](https://github.com/comet-ml/opik/compare/02a6d9de4...HEAD) |
-| **2025-11-18** | `2.2.2` | Launched multimodal input support for HAPO (images + text), restructured optimizer codebase into `algorithms/` package with stricter types, added manifest-based benchmarks with new datasets (HoVer, IFBench, PUPA), and enabled custom run naming. [Commits →](https://github.com/comet-ml/opik/compare/e8903c98843c14f87069ef80da02c53bf18e0cb9...7d545959ad198c3ba3a9474c5e9e18b4fe3b938d) |
+| **2025-11-18** | `2.2.2` | Launched multimodal input support for HRPO (images + text), restructured optimizer codebase into `algorithms/` package with stricter types, added manifest-based benchmarks with new datasets (HoVer, IFBench, PUPA), and enabled custom run naming. [Commits →](https://github.com/comet-ml/opik/compare/e8903c98843c14f87069ef80da02c53bf18e0cb9...7d545959ad198c3ba3a9474c5e9e18b4fe3b938d) |
 | **2025-10-31** | `2.2.1` | Hardened the GEPA optimizer with new candidate utilities, reporting fixes, and clearer trial warnings. [Commits →](https://github.com/comet-ml/opik/compare/54eeef28c7eb0ddfd25bd471c3e33d8c95d3a57f...e8903c98843c14f87069ef80da02c53bf18e0cb9) |
 | **2025-10-23** | `2.2.0` | Standardized optimizer public methods, reorganized algorithm examples under `scripts/optimizer_algorithms/`, and removed legacy MIPRO/test cruft. [Commits →](https://github.com/comet-ml/opik/compare/3274ccf22f6c9fd0ec1d509d2a504832dae2fb61...54eeef28c7eb0ddfd25bd471c3e33d8c95d3a57f) |
-| **2025-10-19** | `2.1.3` | Added multi-metric optimization objectives (secondary feedback charts, example, tests) and improved HAPO logging/docs. [Commits →](https://github.com/comet-ml/opik/compare/a0d049f8a45a010f8ae1f6eecc73ff4c2c1ba29f...3274ccf22f6c9fd0ec1d509d2a504832dae2fb61) |
-| **2025-10-11** | `2.1.2` | Polish release that fixes missing optimizer names across GEPA/HAPO metadata so dashboards and docs stay consistent. [Commits →](https://github.com/comet-ml/opik/compare/04e0937e26bead34a70421057025bc182bf957e3...a0d049f8a45a010f8ae1f6eecc73ff4c2c1ba29f) |
-| **2025-10-10** | `2.1.1` | Introduced HAPO (Hierarchical Adaptive Prompt Optimizer) with reference docs, reporting, and sample scripts while pinning LiteLLM for stability. [Commits →](https://github.com/comet-ml/opik/compare/94da6803fd0fd4afd6cb5737bca39c630956f38d...04e0937e26bead34a70421057025bc182bf957e3) |
+| **2025-10-19** | `2.1.3` | Added multi-metric optimization objectives (secondary feedback charts, example, tests) and improved HRPO logging/docs. [Commits →](https://github.com/comet-ml/opik/compare/a0d049f8a45a010f8ae1f6eecc73ff4c2c1ba29f...3274ccf22f6c9fd0ec1d509d2a504832dae2fb61) |
+| **2025-10-11** | `2.1.2` | Polish release that fixes missing optimizer names across GEPA/HRPO metadata so dashboards and docs stay consistent. [Commits →](https://github.com/comet-ml/opik/compare/04e0937e26bead34a70421057025bc182bf957e3...a0d049f8a45a010f8ae1f6eecc73ff4c2c1ba29f) |
+| **2025-10-10** | `2.1.1` | Introduced HRPO (Hierarchical Reflective Prompt Optimizer) with reference docs, reporting, and sample scripts while pinning LiteLLM for stability. [Commits →](https://github.com/comet-ml/opik/compare/94da6803fd0fd4afd6cb5737bca39c630956f38d...04e0937e26bead34a70421057025bc182bf957e3) |
 | **2025-10-08** | `2.1.0` | Launched the Parameter Optimizer (search spaces, sensitivity analysis, API compliance tests) plus parameter-only tuning docs/examples and MCP test updates. [Commits →](https://github.com/comet-ml/opik/compare/516ba494ffeeaf7ba9d49337f336ac7cd360a4f2...94da6803fd0fd4afd6cb5737bca39c630956f38d) |
 | **2025-10-02** | `2.0.1` | Added the explicit GEPA dependency and `__init__.py` files for optimizer test packages so installs run reliably. [Commits →](https://github.com/comet-ml/opik/compare/c2230e13a2d956635f588bc0a52df16421507b6f...516ba494ffeeaf7ba9d49337f336ac7cd360a4f2) |
 | **2025-10-01** | `2.0.0` | Unified optimizer method signatures and delivered MCP caching/tooling updates for the Evolutionary Optimizer. [Commits →](https://github.com/comet-ml/opik/compare/8207231ec66a718e3247d14ec7e48d5964452bfb...c2230e13a2d956635f588bc0a52df16421507b6f) |
