--- a/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_prompts.mdx
+++ b/apps/opik-documentation/documentation/fern/docs/agent_optimization/optimization/optimize_prompts.mdx
@@ -21,7 +21,7 @@ Use this playbook whenever you need to improve a prompt (single-turn or agentic)
 | Scenario | Recommended optimizer |
 | --- | --- |
 | General prompt copy edits | [MetaPrompt](/agent_optimization/algorithms/metaprompt_optimizer) |
-| Complex failure analysis | [HAPO](/agent_optimization/algorithms/hierarchical_adaptive_optimizer) |
+| Complex failure analysis | [HRPO](/agent_optimization/algorithms/hierarchical_adaptive_optimizer) |
 | Need diverse candidates | [Evolutionary](/agent_optimization/algorithms/evolutionary_optimizer) |
 | Few-shot heavy prompts | [Few-Shot Bayesian](/agent_optimization/algorithms/fewshot_bayesian_optimizer) |
 | Tune sampling params | [Parameter optimizer](/agent_optimization/algorithms/parameter_optimizer) |
@@ -29,9 +29,9 @@ Use this playbook whenever you need to improve a prompt (single-turn or agentic)
 ## 3. Configure the run
 
 ```python
-from opik_optimizer import HAPO
+from opik_optimizer import HRPO
 
-optimizer = HAPO(
+optimizer = HRPO(
     model="openai/gpt-4o",
     max_parallel_batches=4,
     seed=42,
